Enable profiles copyright, spotbugs and checkstyle. Fix a few related issue.